<resources>
    <string name="bt_AddDeliveryCode">Add Delivery Code</string>
    <string name="bt_AddMessage">Add Msg</string>
    <string name="bt_AddToHXField">Add To HX Field</string>
    <string name="bt_ClearLog">Clear Log</string>
    <string name="bt_Compose">Compose</string>
    <string name="bt_Continue">Continue</string>
    <string name="bt_CopyToDrafts">Copy To Drafts</string>
    <string name="bt_CopyToOutbox">Copy to Outbox</string>
    <string name="bt_Delete">Delete</string>
    <string name="bt_Drafts">Drafts</string>
    <string name="bt_HtmlDelivery">Html Deliv.</string>
    <string name="bt_HtmlFileCopy">Html F.Cpy</string>
    <string name="bt_ImageMode">Image Mode</string>
    <string name="bt_Inbox">Inbox</string>
    <string name="bt_Logs">Logs</string>
    <string name="bt_ModemOnOff">Modem On/Off</string>
    <string name="bt_NextMode">Next Mode</string>
    <string name="bt_Outbox">Outbox</string>
    <string name="bt_PlainText">Plain Text</string>
    <string name="bt_PrevMode">Prev Mode</string>
    <string name="bt_Return">Return</string>
    <string name="bt_ReturnToModem">Return to Modem</string>
    <string name="bt_ReturnToTerminal">Return To Terminal</string>
    <string name="bt_RxRsID">Rx RsID</string>
    <string name="bt_SaveAgain">Save Again</string>
    <string name="bt_SaveToDrafts">Save To Drafts</string>
    <string name="bt_SaveToOutbox">Save To Outbox</string>
    <string name="bt_SaveToTemplates">Save To Templates</string>
    <string name="bt_SendAllMessages">Send All Messages</string>
    <string name="bt_SendText">Send Text</string>
    <string name="bt_Sent">Sent</string>
    <string name="bt_Share">Share</string>
    <string name="bt_SlantLeft">Slant     Left</string>
    <string name="bt_SlantRight">Slant Right</string>
    <string name="bt_SpeedColor">Speed/Color</string>
    <string name="bt_SqlchDown">Sqlch Down</string>
    <string name="bt_SqlchUp">Sqlch   Up</string>
    <string name="bt_StopTx">Stop Tx</string>
    <string name="bt_Templates">Templates</string>
    <string name="bt_ToOutbox">To Outbox</string>
    <string name="bt_TransferFormOnly">Tfer Form Only</string>
    <string name="bt_Tune">Tune</string>
    <string name="bt_TxOverRadio">Tx over Radio</string>
    <string name="bt_TxRsID">Tx RsID</string>
    <string name="bt_WFallOnOff">W.Fall On/Off</string>
    <string name="pref_2To256">2,4,8,16,32,64,128 or 256</string>
    <string name="pref_8BitExtendedCharSet">8-bit extended characters (UTF-8)</string>
    <string name="pref_AbortFormRxAfter">Abort Form Rx after NN seconds of inactivity</string>
    <string name="pref_AllowErrors">Allow Errors</string>
    <string name="pref_AllowManualTuning">Allow Manual Tuning</string>
    <string name="pref_AlsoTransmitUpperStartTone">Also transmit upper start tone</string>
    <string name="pref_AndFlushRxPipeline">(and flush Rx pipeline)</string>
    <string name="pref_AppTheme">App Theme</string>
    <string name="pref_AudioFrequency">Audio Frequency, 500 to 2500Hz</string>
    <string name="pref_BandwidthHz">Bandwidth (Hz)</string>
    <string name="pref_BandwidthRelativeToSignalWidth">(Bandwidth Relative to Signal Width)</string>
    <string name="pref_CWIDetectionSuppression">CWI Detection and Suppression</string>
    <string name="pref_CWIThreshold">CWI threshold (0.0 to 1.0)</string>
    <string name="pref_CallSignInFileName">Call Sign in File Name</string>
    <string name="pref_DATAEXCHANGE">DATA EXCHANGE</string>
    <string name="pref_DateFormat">Date Format</string>
    <string name="pref_DateTimeFormat">DATE / TIME FORMAT</string>
    <string name="pref_DetectThorPreamble">Detect THOR preamble</string>
    <string name="pref_EmailAddress">Email Address</string>
    <string name="pref_EncoderForCompression">Encoder For Compression</string>
    <string name="pref_EndOfXmtID">Send Post Transmission RSID</string>
    <string name="pref_ExtractTimesOut">Extract Times Out</string>
    <string name="pref_FILENAME">FILE NAME</string>
    <string name="pref_FilterBandwidthFactor">Filter bandwidth factor (1.0 to 2.0)</string>
    <string name="pref_FilteringBeforeDecoding">Filtering Before Decoding</string>
    <string name="pref_ForSomeDevices">For Some Devices (typical 16 seconds)</string>
    <string name="pref_ForceCompressionOnTx">Force Compression on Tx</string>
    <string name="pref_ForceIntegrationReset">Force Integration (FEC) depth to be Reset</string>
    <string name="pref_GPSTIME">GPS TIME</string>
    <string name="pref_GeneralSettings">General Settings</string>
    <string name="pref_IDs">RSID</string>
    <string name="pref_IMAGEATTACHMENT">IMAGE ATTACHMENT</string>
    <string name="pref_IfItSavesTxCharacters">(Note: if it saves TX character count)</string>
    <string name="pref_IntegrationPeriod">Integration Period (2 to 128, default 4)</string>
    <string name="pref_JpegCompressionQuality">Jpeg Compression Quality</string>
    <string name="pref_LeapSecondsCorrection">Leap Seconds Correction</string>
    <string name="pref_LongReceiveIntegration">Long Receive Integration</string>
    <string name="pref_MaxPictureSizeBeforeAutoDownsize">Max Picture Size Before Auto-Downsize</string>
    <string name="pref_MaximunMegaPixels">Maximun Mega Pixels</string>
    <string name="pref_MessageWordsPerLine">Message Words/Line</string>
    <string name="pref_ModeList">Mode List</string>
    <string name="pref_ModemVolume">Modem Volume</string>
    <string name="pref_ModesSpecificSettings">Modes Specific Settings</string>
    <string name="pref_MultiPSKCompatibleFEC">MultiPSK-compatible FEC</string>
    <string name="pref_MyAddress">My Address</string>
    <string name="pref_MyCallsign">My Callsign</string>
    <string name="pref_MyCityStateZIP">My City/ State/ ZIP</string>
    <string name="pref_MyName">My Name</string>
    <string name="pref_MyTelephone">My Telephone</string>
    <string name="pref_NOCAL">NOCAL</string>
    <string name="pref_NextSerialNumber">Next Serial Number</string>
    <string name="pref_NumberOfFecBlocks">(Number of FEC blocks)</string>
    <string name="pref_NumberOfTones">Number of Tones</string>
    <string name="pref_OnHTMLDisplayForms">(On HTML Display Forms)</string>
    <string name="pref_PERSONALDATA">PERSONAL DATA</string>
    <string name="pref_PilotPowerDb">Pilot Power (dB)</string>
    <string name="pref_PilotTone">Pilot Tone</string>
    <string name="pref_RADIOGRAM">RADIOGRAM</string>
    <string name="pref_SaveCpuResources">Save CPU Resources</string>
    <string name="pref_SearchesPassband">Searches Passband</string>
    <string name="pref_SerialInFileName">Serial # in File Name</string>
    <string name="pref_ShowARLDescription">Show ARL Description</string>
    <string name="pref_SlowCpu">Slow CPU</string>
    <string name="pref_SoftBitDecoding">Soft-bit Decoding)</string>
    <string name="pref_SoftSymbolDecoding">Soft-symbol decoding</string>
    <string name="pref_TimeFormat">Time Format</string>
    <string name="pref_TimeInFileName">Time in File Name</string>
    <string name="pref_ToneDuration">Tone Duration</string>
    <string name="pref_ToneFrequencySpacing">(tone frequency spacing)</string>
    <string name="pref_TransmitLowerStartTone">Transmit Lower Start Tone</string>
    <string name="pref_TuneMargin">Tune Margin (2 to 128, default 8)</string>
    <string name="pref_UseCompression">Use Compression for Data Exchange</string>
    <string name="pref_UseCustomListOfModes">Use Custom List Of Modes</string>
    <string name="pref_UseGPSTime">Use GPS Time</string>
    <string name="pref_UserInterface">USER INTERFACE</string>
    <string name="pref_WhenNewBWOrTonesSelected">When new BW/Tones selected</string>
    <string name="txt_About">About</string>
    <string name="txt_AndFormat">\nAnd its Format:</string>
    <string name="txt_AreYouSureDeleteLogFile">Are you sure you want to Delete This Log File?</string>
    <string name="txt_AreYouSureDeleteMessage">Are you sure you want to Delete This Message?</string>
    <string name="txt_AreYouSureExit">Are you sure you want to Exit?</string>
    <string name="txt_AreYouSureOverwriteForms">This WILL OVERWRITE the Existing Forms in the NBEMS.files folder and Add New Forms. Proceed?</string>
    <string name="txt_AudioBTOFF">Audio BT OFF</string>
    <string name="txt_AudioBTON">Audio BT ON</string>
    <string name="txt_BTConnected">Bluetooth Connected</string>
    <string name="txt_BTDisconnected">Bluetooth Disconnected</string>
    <string name="txt_BadCrcFileContent">Checksum Failed or Missing part. File Content:</string>
    <string name="txt_CPU">CPU</string>
    <string name="txt_Cancel">Cancel</string>
    <string name="txt_CantEditThatMessage">Can\'t Edit this message</string>
    <string name="txt_ChecksumOK">\"\nFile Integrity Check: Checksuml OK\"</string>
    <string name="txt_ChooseLocForNbemsFiles">Please choose the Location for the NBEMS.files folder. \n\nNavigate to inside the desired folder then press the OK button</string>
    <string name="txt_Color">Color</string>
    <string name="txt_ComposeViewLongPress">Compose View\n\n Long Press on a Form for creating a New Message</string>
    <string name="txt_CopiedFile">Copied File</string>
    <string name="txt_Digital">Digital</string>
    <string name="txt_DocumentDeleted">Document Deleted</string>
    <string name="txt_DoYouWantToMoveMsgToSentFolder">"Do you want to Move this Message to the SENT folder?"</string>
    <string name="txt_DraftViewLongPress">Drafts View Screen \n\nLong Press on a Message to Continue Editing</string>
    <string name="txt_EnterFileName">Enter File Name</string>
    <string name="txt_Exit">EXIT</string>
    <string name="txt_FileNameNotBlank">File Name can\'t be blank</string>
    <string name="txt_FileNotFound">File Not Found</string>
    <string name="txt_FldigiModemOn">Fdigi Modem ON, Microphone/Bluetooth in use by Modem</string>
    <string name="txt_FormattingWait">Formating...Please Wait</string>
    <string name="txt_Grey">Grey</string>
    <string name="txt_HTML">HTML</string>
    <string name="txt_ImageInsertedInMessage">Image Inserted in Message</string>
    <string name="txt_ImageReceivedTooLate">Image received too late after message (&gt; 20 sec).\\n\\nReceived image will NOT be attached to the message as expected.\\n\\nCopy the message to Draft, then edit and add the received image manually.</string>
    <string name="txt_InboxViewscreen">Inbox View Screen \n\nLong Press on a Message for display</string>
    <string name="txt_Listening">Listening</string>
    <string name="txt_LogsView">Logs View\n\n Long Press on a Log file to view</string>
    <string name="txt_ModemCannotStopNow">Modem cannot be stopped now! Either TXing or currently Receiving a Message</string>
    <string name="txt_ModemON">Modem ON</string>
    <string name="txt_ModemScreen">Modem Screen</string>
    <string name="txt_S2N">S2N</string>
    <string name="txt_UpdateForms">Update Forms</string>
    <string name="pref_DOMINOEX" translatable="false">DOMINOEX</string>
    <string name="pref_MT63" translatable="false">MT63</string>
    <string name="pref_OLIVIA" translatable="false">OLIVIA</string>
    <string name="pref_CONTESTIA" translatable="false">CONTESTIA</string>
    <string name="pref_PSK" translatable="false">PSK</string>
    <string name="pref_THOR" translatable="false">THOR</string>
    <string name="pref_ButtonTextSize">Button Text Size (default 12)</string>
    <string name="txt_BluetoothAudio">Bluetooth Audio</string>
    <string name="txt_Settings">Settings</string>
    <string name="txt_SaveRestoreSettings">Save/Restore Settings</string>
    <string name="txt_SaveSettingsToFile">Save Settings to File</string>
    <string name="txt_RestoreSettingsFromFile">Restore Settings from File</string>
    <string name="txt_RestoreSettingsToDefault">Restore Settings to Default</string>
</resources>