<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:weightSum="1" 
	android:orientation="vertical"
	android:id="@+id/modemnwfscreen" >
	<LinearLayout
	    android:id="@+id/FrameLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:weightSum="1" >
		<TextView
		    android:id="@+id/cputext"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.90"
		    android:text="@string/txt_CPU" >
		</TextView>
		<ProgressBar
		    android:id="@+id/cpu_load"
		    style="@android:style/Widget.ProgressBar.Horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:layout_weight="0.10"
		    android:max="100"
		    android:maxHeight="8dp"
		    android:minHeight="8dp"
		    android:progress="0" />
	</LinearLayout>
    <LinearLayout
        android:id="@+id/FrameLayout1A"
        android:layout_width="fill_parent"
        android:layout_height="18dp"
        android:layout_weight="0.01" >
        android:weightSum="1" >
        <CheckBox
            android:id="@+id/rxrsid"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/bt_RxRsID" />
        <CheckBox
            android:id="@+id/txrsid"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/bt_TxRsID" />
    </LinearLayout>
	<ScrollView android:id="@+id/modemscrollview"
		android:layout_width="fill_parent"
		android:layout_height="0dp" 
		android:layout_weight="0.93">
		<TextView android:id="@+id/modemview"
		    android:text="@string/txt_ModemScreen"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="4">
		</TextView>
	</ScrollView>
	<LinearLayout
	    android:id="@+id/FrameLayout2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:weightSum="1" >
		<TextView
		    android:id="@+id/cputext2"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.90"
			android:text="@string/txt_S2N" >
		</TextView>
		<ProgressBar
		    android:id="@+id/signal_quality"
		    style="@android:style/Widget.ProgressBar.Horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:layout_weight="0.10"
		    android:max="100"
		    android:maxHeight="8dp"
		    android:minHeight="8dp"
		    android:progress="0" />
	</LinearLayout>
	<LinearLayout android:id="@+id/FrameLayout3"
		android:layout_width="fill_parent"
		android:layout_height="47dp"
		android:weightSum="1" 
		android:layout_weight="0.03">
		<Button android:id="@+id/button_modeUP" 
			android:text="@string/bt_NextMode"
			android:layout_height="fill_parent" 
			android:layout_weight="0.25" 
			android:layout_width="0dp">
		</Button>
		<Button android:id="@+id/button_squelchUP" 
			android:text="@string/bt_SqlchUp"
			android:layout_height="fill_parent" 
			android:layout_weight="0.25" 
			android:layout_width="0dp">
		</Button>
		<Button android:id="@+id/button_modemONOFF" 
			android:text="@string/bt_ModemOnOff"
			android:layout_height="fill_parent" 
			android:layout_width="0dp" 
			android:layout_weight="0.25">
		</Button>
		<Button android:id="@+id/button_stopTX" 
			android:text="@string/bt_StopTx"
			android:layout_height="fill_parent" 
			android:layout_width="0dp" 
			android:layout_weight="0.25">
		</Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/FrameLayout4"
		android:layout_width="fill_parent"
		android:layout_height="47dp"
		android:layout_weight="0.03" 
		android:weightSum="1">
		<Button android:id="@+id/button_modeDOWN" 
			android:text="@string/bt_PrevMode"
			android:layout_height="fill_parent" 
			android:layout_weight="0.25" 
			android:layout_width="0dp">
		</Button>
		<Button android:id="@+id/button_squelchDOWN" 
			android:text="@string/bt_SqlchDown"
			android:layout_height="fill_parent" 
			android:layout_weight="0.25" 
			android:layout_width="0dp">	
		</Button>
		<Button android:id="@+id/button_tune" 
			android:text="@string/bt_Tune"
			android:layout_height="fill_parent"
			android:layout_width="0dp" 
			android:layout_weight="0.25">
		</Button>
		<Button android:id="@+id/button_waterfallONOFF" 
			android:text="@string/bt_WFallOnOff"
			android:layout_width="0dp" 
			android:layout_weight="0.25" 
			android:layout_height="fill_parent">
		</Button>
	</LinearLayout>
</LinearLayout>
